# mapper

./: .clang-tidy  .gitattributes  .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  CPackaging.cmake  Doxyfile  INSTALL  INSTALL.md  README.md  android-app.md  android-index.md  android-pc.md  android-requirements.md  android-storage.md  code-check-wrapper.sh  codespell-ignore.txt  codespell.sh  color_dock_widget.md  colors_symbols.md  course_design.md  cove.md  crt_files.md  drawing_toolbar.html  edit_menu.html  edit_menu.md  faq.md  file_menu.md  find_objects.md  gdal.md  georeferencing.md  gps_menu.html  grid.md  index.html  index.md  install.html  installation.md  iwyu-mapper.imp  iwyu-qt.imp  (+41 more)
doc/licensing/: CMakeLists.txt  arch-licensing.cmake  debian-licensing.cmake  fedora-licensing.cmake  gentoo-licensing.cmake  licensing-html.qdocconf  licensing.css  licensing.html  licensing.pro  licensing.qrc  linux-distribution.cmake  opensuse-leap-licensing.cmake  opensuse-licensing.cmake  superbuild-licensing.cmake  ubuntu-licensing.cmake
docs/licensing/: CMakeLists.txt  licensing.pro  licensing.qdocconf  licensing.qrc
examples/: CMakeLists.txt  README.md  autosave-example.qrc  complete map.omap  complete map.xmap  examples.pro  examples.qrc  forest sample.omap  forest sample.xmap  overprinting.omap  overprinting.xmap  sprint sample.omap  sprint sample.xmap
examples/src/: complete map.xmap  forest sample.xmap  overprinting.xmap  sprint sample.xmap
help/: CMakeLists.txt  Mapper.qhcp.in  Mapper.qhp.in  compile.sh  oomaphelp.qhp  oomaphelpcollection.qhcp  oomaphelpcollection.qhcp.in  view.sh
help/html/: drawing_toolbar.html  edit_menu.html  file_menu.html  gps_menu.html  index.html  install.html  map_screen.html  oomap.css  opening.html  settings.html  symbols.html  template_menu.html  tools_menu.html  view_menu.html
help/html_en/: color_dock_widget.html  drawing_toolbar.html  edit_menu.html  file_menu.html  georeferencing.html  index.html  index_manual.html  install.html  map_menu.html  map_screen.html  new_map.html  oomap.css  settings.html  symbol_editor.html  symbol_replace_dialog.html  symbol_settings.html  symbols.html  symbols_menu.html  template_menu.html  toolbars.html  tools_menu.html  view_menu.html
help/tip-of-the-day/: tips_de.txt  tips_en.txt  tips_fr.txt  tips_uk.txt
libocad/: CMakeLists.txt  array.c  color.c  file.c  format7.txt  format8.txt  geometry.c  libocad.h  object.c  ocad_object.c  ocad_symbol.c  path.c  setup.c  string.c  symbol.c  template.c  types.c
packaging/: CMakeLists.txt  Mapper_Source.cmake.in  custom_install.cmake.in  translations.cpp
packaging/android/: AndroidManifest.xml.in  CMakeLists.txt  CPackConfig.cmake.in  Mapper.pro.in  install_android_package.cmake.in  strings.xml.in
packaging/apple/: Info.plist  Info.plist.in
packaging/debian/: Mapper.desktop  Mapper.xpm  openorienteering-mapper.xml
packaging/linguist/: CMakeLists.txt
packaging/linux/: Mapper.desktop  openorienteering-mapper.desktop  openorienteering-mapper.xml
packaging/macos/: hdiutil.sh
packaging/macosx/: Mapper.icns
packaging/src/: CMakeLists.txt  Mapper_Source.cmake.in
qtsingleapplication/: CMakeLists.txt  qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile_win.cpp  qtsingleapplication.cpp
src/: .gitignore  CMakeLists.txt  advanced_pdf.cpp  advanced_pdf_p.h  cli.cpp  cli.h  color_dock_widget.cpp  color_dock_widget.h  compass.cpp  compass.h  compass_display.cpp  compass_display.h  draw_path.cpp  draw_path.h  draw_point.cpp  draw_point.h  draw_text.cpp  draw_text.h  dxfparser.cpp  dxfparser.h  edit_tool.cpp  edit_tool.h  file_format.cpp  file_format.h  file_format_native.cpp  file_format_native.h  file_format_ocad8.cpp  file_format_ocad8.h  file_format_ocad8_p.h  file_format_registry.cpp  file_format_registry.h  file_format_xml.cpp  file_format_xml.h  file_format_xml_p.h  file_import_export.cpp  file_import_export.h  georeferencing.cpp  georeferencing.h  georeferencing_dialog.cpp  georeferencing_dialog.h  (+203 more)
symbol sets/: CMakeLists.txt  ISOM 2017-2-ISSkiOM 2019.crt  ISOM 2017-2-ISSprOM 2019.crt  ISOM2000-ISOM 2017-2.crt  ISOM2000-ISOM2017.crt  ISOM2000-ISSOM.crt  ISOM2017-ISOM 2017-2.crt  ISSOM-ISSprOM 2019.crt  ISSprOM 2019-ISSprOM 2019-2.crt  OSM-ISOM 2017-2.crt  OSM-ISOM2000.crt  OSM-ISOM2017.crt  OSM-ISSOM.crt  OSM-ISSkiOM 2019.crt  OSM-ISSprOM 2019.crt  README  README.md  merge-crt.sh  symbol sets.pro
test/: AUTORUN_TESTS.cmake.in  CMakeLists.txt  TESTNAME-RUN.cmake.in  auto_save_t.cpp  auto_save_t.h  autosave_t.cpp  autosave_t.h  cli_t.cpp  cli_t.h  coord_xml_t.cpp  coord_xml_t.h  cxx11_t.cpp  cxx11_t.h  duplicate_equals_t.cpp  duplicate_equals_t.h  dxf_t.cpp  encoding_t.cpp  encoding_t.h  file_format_t.cpp  file_format_t.h  georef_ocd_mapping_t.cpp  georef_ocd_mapping_t.h  georeferencing_t.cpp  georeferencing_t.h  grid_t.cpp  key_value_container_t.cpp  locale_t.cpp  locale_t.h  map_color_t.cpp  map_color_t.h  map_printer_t.cpp  map_t.cpp  map_t.h  mapper_t.cpp  object_query_t.cpp  object_query_t.h  object_t.cpp  ocd_file_import_t.cpp  ocd_file_import_t.h  ocd_parameter_stream_reader_t.cpp  (+23 more)
translations/: CMakeLists.txt  Mapper_de.ts  OpenOrienteering_ar.ts  OpenOrienteering_bg.ts  OpenOrienteering_ca.ts  OpenOrienteering_cs.ts  OpenOrienteering_cy.ts  OpenOrienteering_da.ts  OpenOrienteering_de.ts  OpenOrienteering_en.ts  OpenOrienteering_eo.ts  OpenOrienteering_es.ts  OpenOrienteering_et.ts  OpenOrienteering_eu.ts  OpenOrienteering_fi.ts  OpenOrienteering_fr.qm  OpenOrienteering_fr.ts  OpenOrienteering_he.ts  OpenOrienteering_hr.ts  OpenOrienteering_hu.ts  OpenOrienteering_id.ts  OpenOrienteering_it.ts  OpenOrienteering_ja.ts  OpenOrienteering_ko.ts  OpenOrienteering_lv.ts  OpenOrienteering_nb.ts  OpenOrienteering_nl.ts  OpenOrienteering_pl.ts  OpenOrienteering_pt.ts  OpenOrienteering_pt_BR.ts  OpenOrienteering_pt_PT.ts  OpenOrienteering_ru.ts  OpenOrienteering_sv.ts  OpenOrienteering_ta.ts  OpenOrienteering_template.ts  OpenOrienteering_tr.ts  OpenOrienteering_uk.ts  OpenOrienteering_zh_CN.ts  OpenOrienteering_zh_HK.ts  OpenOrienteering_zh_Hant.ts  (+41 more)
(+891 files in other folders)
